@@ -16,6 +16,7 @@ stringeol=0x000000;0xe0c0e0
 # this is a bit dim, may want to change
 type=0x003030;;true
 function=0x000080
+extra=0x404080
 
 
 
